<resources>
    <string name="app_name">Address Book RushORM</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="label_name">Name:</string>
    <string name="label_phone">Phone:</string>
    <string name="label_email">Email:</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="contact_add">ADD CONTACT</string>
    <string name="contact_edit">EDIT CONTACT</string>
    <string name="toast_contact_added">Contact added</string>
    <string name="toast_contact_edited">Contact edited</string>
    <string name="toast_contact_deleted">Contact deleted</string>
</resources>
